[gd_scene load_steps=3 format=3 uid="uid://b6p2v8g5q4x7y"]

[ext_resource type="Script" uid="uid://bl8wgg60ombjh" path="res://options_menu.gd" id="1_options"]
[ext_resource type="Texture2D" uid="uid://cfy8e87xc6p0b" path="res://assets/cog_icon.png" id="2_cog"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_options")

[node name="SlidePanel" type="ColorRect" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -250.0
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="SlidePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="SlidePanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Icon" type="TextureRect" parent="SlidePanel/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_cog")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="SlidePanel/VBoxContainer/Header"]
layout_mode = 2
text = "OPTIONS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SlidePanel/VBoxContainer"]
layout_mode = 2

[node name="HapticRow" type="HBoxContainer" parent="SlidePanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonHaptic" type="Button" parent="SlidePanel/VBoxContainer/HapticRow"]
unique_name_in_owner = true
layout_mode = 2
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Haptic Feedback"
flat = true
alignment = 0

[node name="WrapperHaptic" type="Control" parent="SlidePanel/VBoxContainer/HapticRow"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="ToggleHaptic" type="CheckButton" parent="SlidePanel/VBoxContainer/HapticRow/WrapperHaptic"]
unique_name_in_owner = true
layout_mode = 0
focus_mode = 0

[node name="KeyboardRow" type="HBoxContainer" parent="SlidePanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonKeyboard" type="Button" parent="SlidePanel/VBoxContainer/KeyboardRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Full Keyboard"
flat = true
alignment = 0

[node name="WrapperKeyboard" type="Control" parent="SlidePanel/VBoxContainer/KeyboardRow"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="ToggleKeyboard" type="CheckButton" parent="SlidePanel/VBoxContainer/KeyboardRow/WrapperKeyboard"]
unique_name_in_owner = true
layout_mode = 0
focus_mode = 0

[node name="IntegerScalingRow" type="HBoxContainer" parent="SlidePanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonIntegerScaling" type="Button" parent="SlidePanel/VBoxContainer/IntegerScalingRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Integer Scaling"
flat = true
alignment = 0

[node name="WrapperIntegerScaling" type="Control" parent="SlidePanel/VBoxContainer/IntegerScalingRow"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="ToggleIntegerScaling" type="CheckButton" parent="SlidePanel/VBoxContainer/IntegerScalingRow/WrapperIntegerScaling"]
unique_name_in_owner = true
layout_mode = 0
focus_mode = 0

[node name="ShowControlsRow" type="HBoxContainer" parent="SlidePanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonShowControls" type="Button" parent="SlidePanel/VBoxContainer/ShowControlsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Hide UI w/ Controller"
flat = true
alignment = 0

[node name="WrapperShowControls" type="Control" parent="SlidePanel/VBoxContainer/ShowControlsRow"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="ToggleShowControls" type="CheckButton" parent="SlidePanel/VBoxContainer/ShowControlsRow/WrapperShowControls"]
unique_name_in_owner = true
layout_mode = 0
focus_mode = 0

[node name="InputModeRow" type="HBoxContainer" parent="SlidePanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonInputMode" type="Button" parent="SlidePanel/VBoxContainer/InputModeRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Input: Mouse"
flat = true
alignment = 0

[node name="WrapperInputMode" type="Control" parent="SlidePanel/VBoxContainer/InputModeRow"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="ToggleInputMode" type="CheckButton" parent="SlidePanel/VBoxContainer/InputModeRow/WrapperInputMode"]
unique_name_in_owner = true
layout_mode = 0
focus_mode = 0

[node name="SensitivityRow" type="HBoxContainer" parent="SlidePanel/VBoxContainer"]
layout_mode = 2

[node name="LabelSensitivity" type="Label" parent="SlidePanel/VBoxContainer/SensitivityRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "T.Sensitivity"

[node name="WrapperSensitivity" type="HBoxContainer" parent="SlidePanel/VBoxContainer/SensitivityRow"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="SliderSensitivity" type="HSlider" parent="SlidePanel/VBoxContainer/SensitivityRow/WrapperSensitivity"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 2
min_value = 0.1
max_value = 2.0
step = 0.1
value = 0.5

[node name="LabelSensitivityValue" type="Label" parent="SlidePanel/VBoxContainer/SensitivityRow/WrapperSensitivity"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "0.5"
horizontal_alignment = 2

[node name="Spacer" type="Control" parent="SlidePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonAppSettings" type="Button" parent="SlidePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Deep Links Settings"
flat = true

[node name="ButtonSave" type="Button" parent="SlidePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Save Settings"
flat = true

[node name="CloseButton" type="Button" parent="SlidePanel/VBoxContainer"]
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
text = "Close Menu"
flat = true

[node name="VersionLabel" type="Label" parent="SlidePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "v1.0"
horizontal_alignment = 1

[node name="EdgeHandler" type="Control" parent="."]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 30.0
grow_vertical = 2
mouse_default_cursor_shape = 10
